Kubernetes-Basic-Advance-Labs/projects-manifest/5th-project/service-resource-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-cip
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
